# ModsTranslationPack

./: CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/configs/: override_list.json  versions.json
.github/scripts/: multiversions.py  override_script.py
.github/workflows/: CI-CommentPR.yml  CI-Contributors.yml  CI-Labeler.yml  CI-ModsCounter.yml  CI-OverrideCache.yml  CI-Pack-Beta.yml  CI-Pack-ReleasePlease.yml  CI-UploadR2.yml  CI-VerifyCommit.yml  CI-VerifyStructure.yml  Reusable-ImageResize.yml  Reusable-MatrixSetup.yml  Reusable-ModrinthPublish.yml  Reusable-ResourcePacker.yml  Reusable-Summary.yml  Reusable-VerifyExistVersion.yml
MultiVersions/Fabric/1.20/niftycarts/lang/: zh_tw.json
MultiVersions/Fabric/main/culturaldelights/lang/: en_us.json  zh_tw.json
MultiVersions/Fabric/main/dragonloot/lang/: en_us.json  zh_tw.json
MultiVersions/Fabric/main/niftycarts/lang/: en_us.json  zh_tw.json
MultiVersions/Fabric/main/wardentools/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/1.18/bhc/lang/: zh_tw.json
MultiVersions/Forge/1.18/craftingtweaks/lang/: zh_tw.json
MultiVersions/Forge/1.18/trashslot/lang/: zh_tw.json
MultiVersions/Forge/1.19/bcc/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/1.19/bhc/lang/: zh_tw.json
MultiVersions/Forge/1.19/endersdelight/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/1.19/industrialforegoing/lang/: zh_tw.json
MultiVersions/Forge/1.19/snowyspirit/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/1.19/trashslot/lang/: en_us.json  zh_tw.json
(+184 files in other folders)
