[tool.poetry]
name = "modstranslationpack"
version = "1.0"
description = "A simple scripts collection!"
authors = ["Miku <26039249+xMikux@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.11.16"
six = "1.17.0"
pillow = "11.1.0"
loguru = "0.7.3"
selenium = "4.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
